interface bug fix: tags hidden by sidebox into alltags page
git-svn-id: https://semanticscuttle.svn.sourceforge.net/svnroot/semanticscuttle/trunk@22 b3834d28-1941-0410-a4f8-b48e95affb8f

--- a/scuttle.css
+++ b/scuttle.css
@@ -258,9 +258,10 @@ div#sidebar ul li {
 
 p.tags {
     line-height: 2.25em;
-    margin: 2em 10%;
+    /*margin: 2em 10%;*/
     text-align: justify;
     vertical-align: middle;
+    width: 70%;
 }
 p.tags a,
 p.tags span {
